--- a/classes/IMySerialization2/IMySerialization.csproj
+++ b/classes/IMySerialization2/IMySerialization.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{01337F11-50D3-4C8A-B69B-1ED88F7502AA}</ProjectGuid>
+    <ProjectGuid>{C4F83932-4774-4CFF-8E57-AFFE046727D5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>class_library</RootNamespace>
-    <AssemblyName>class_library</AssemblyName>
+    <RootNamespace>IMySerialization2</RootNamespace>
+    <AssemblyName>IMySerialization2</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -20,7 +20,7 @@
     <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>0</WarningLevel>
+    <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.12.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,15 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Clerk.cs" />
-    <Compile Include="Director.cs" />
-    <Compile Include="Economist.cs" />
-    <Compile Include="Electrician.cs" />
-    <Compile Include="Manager.cs" />
-    <Compile Include="Profile.cs" />
+    <Compile Include="IMySerialization.cs" />
+    <Compile Include="MyBinarySerialization.cs" />
+    <Compile Include="MyJsonSerialization.cs" />
+    <Compile Include="MyTextSerialization.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Worker.cs" />
-    <Compile Include="WorkshopWorker.cs" />
+    <Compile Include="SerializatorsArray.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
