--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.suo
 *.user
 *.userosscache
-*.sln.docstates
+*.sln.docstatesgit 
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
