--- a/classes/IArchivePlugin/IArchivePlugin.csproj
+++ b/classes/IArchivePlugin/IArchivePlugin.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="SharpZipLib" Version="1.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Reference Include="IMySerialization2">
       <HintPath>..\IMySerialization2\bin\Debug\IMySerialization2.dll</HintPath>
     </Reference>
